# mcp-llms-txt

./: README.md  pyproject.toml
src/mcp_llms_txt/: __init__.py  server.py
