[project]
name = "mcp-llms-txt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "TerminalMan", email = "84923604+SecretiveShell@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
mcp-llms-txt = "mcp_llms_txt:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
